<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateNoteActivity"
    android:orientation="vertical"
    android:padding="12dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_textview_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_name_hint"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:weightSum="6">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:layout_marginEnd="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_textview_date_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_start_date_hint"
                android:enabled="false"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/create_btn_date_start"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/create_btn_select"
            android:layout_marginStart="8dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="6"
        android:layout_marginTop="12dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:layout_marginEnd="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_textview_date_end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_end_date_hint"
                android:enabled="false"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/create_btn_date_end"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/create_btn_select"
            android:layout_marginStart="8dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="12dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_textview_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/create_desc_hint"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/create_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/create_button" />
</LinearLayout>