<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rv_card"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="8"
            android:padding="8dp">

            <!-- Title, secondary and supporting text -->
            <TextView
                android:layout_weight="7"
                android:id="@+id/card_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/rvcard_title"
                android:textAppearance="?attr/textAppearanceHeadline6"
                />

            <TextView
                android:layout_weight="1"
                android:id="@+id/card_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/rvcard_time"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textStyle="bold"
                android:textDirection="rtl"/>

        </LinearLayout>

        <!-- Buttons -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rvcard_btn"
                style="?attr/borderlessButtonStyle"
                android:id="@+id/more_info_btn"
                />
        </LinearLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>